--- a/app/app.csproj
+++ b/app/app.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Common\DataGridView\" />
+  </ItemGroup>
+
 </Project>
